--- a/ListViewDemo/res/layout/list_item.xml
+++ b/ListViewDemo/res/layout/list_item.xml
@@ -10,7 +10,13 @@
         android:layout_height="30dp" />
     <TextView
         android:id="@+id/lv_item_tv"
-        android:layout_width="match_parent"
+        android:layout_width="90dp"
         android:layout_height="30dp"/>
+    
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="删除 "/>
 
 </LinearLayout>
