--- a/ListViewDemo/res/layout/list_refresh.xml
+++ b/ListViewDemo/res/layout/list_refresh.xml
@@ -6,7 +6,8 @@
     
     <TextView 
     	android:layout_width="match_parent"
-    	android:layout_height="30dp"
-    	android:id="@+id/lv_refresh_tv"/>
+    	android:layout_height="90dp"
+    	android:id="@+id/lv_refresh_tv"
+    	android:padding="30dp"/>
 
 </LinearLayout>
