--- a/ListViewDemo/res/layout/list_item.xml
+++ b/ListViewDemo/res/layout/list_item.xml
@@ -1,22 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
-    
-    <ImageView
-        android:id="@+id/lv_item_img"
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
-    <TextView
-        android:id="@+id/lv_item_tv"
-        android:layout_width="90dp"
-        android:layout_height="30dp"/>
-    
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="删除 "/>
+    android:clickable="true"
+    android:focusable="true" >
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="75dip"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/pp_list_item_selector"
+         >
+
+        <RelativeLayout
+            android:id="@+id/pp_d_control_tool"
+            android:layout_width="74dp"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/pp_list_item_selector" >
+
+            <Button
+                android:id="@+id/pp_app_control_btn"
+                android:layout_width="74dp"
+                android:layout_height="75dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:drawablePadding="-27dp"
+                android:drawableTop="@drawable/pp_selector_btn_app_other"
+                android:gravity="center"
+                android:paddingBottom="24dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="24dp"
+                android:textColor="@color/pp_font_color_white"
+                android:textSize="@dimen/pp_font_size_small"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/pp_d_del_btn"
+                android:layout_width="74dp"
+                android:layout_height="75dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:drawablePadding="-27dp"
+                android:drawableTop="@drawable/pp_selector_btn_app_delete"
+                android:gravity="center"
+                android:paddingBottom="24dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="24dp"
+                android:text="@string/text_delete"
+                android:textColor="@color/pp_font_color_white"
+                android:textSize="@dimen/pp_font_size_small"
+                 />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/pp_app_img"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="7dip"
+            android:layout_marginRight="11.6dip"
+            android:contentDescription="@string/text_image"
+            android:focusable="false" />
+
+        <TextView
+            android:id="@+id/pp_app_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/pp_app_img"
+            android:layout_toLeftOf="@id/pp_d_control_tool"
+            android:layout_toRightOf="@id/pp_app_img"
+            android:focusable="false"
+            android:singleLine="true"
+            android:textColor="@color/pp_font_color_normal"
+            android:textSize="@dimen/pp_font_size_normal" />
+
+        <TextView
+            android:id="@+id/pp_app_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pp_app_name"
+            android:layout_marginTop="9dip"
+            android:layout_toRightOf="@id/pp_app_img"
+            android:focusable="false"
+            android:gravity="bottom"
+            android:text="2.5M "
+            android:textColor="@color/pp_font_color_grey"
+            android:textSize="@dimen/pp_font_size_small" />
+
+        <TextView
+            android:id="@+id/pp_app_version"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pp_app_name"
+            android:layout_marginTop="9dip"
+            android:layout_toLeftOf="@id/pp_d_control_tool"
+            android:layout_toRightOf="@id/pp_app_size"
+            android:focusable="false"
+            android:gravity="bottom"
+            android:singleLine="true"
+            android:text="ver:1.0.0"
+            android:textColor="@color/pp_font_color_grey"
+            android:textSize="@dimen/pp_font_size_small" />
+    </RelativeLayout>
 
 </LinearLayout>
