--- a/ListViewDemo/res/layout/activity_main.xml
+++ b/ListViewDemo/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     tools:context="com.example.demo.MainActivity"
     tools:ignore="MergeRootFrame" >
     
-    <com.example.listviewdemo.PPList
-        android:id="@+id/lv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    
+    <include layout="@layout/pp_layout_listview" />"
+    
 </FrameLayout>
