--- a/ListViewDemo/res/layout/list_item_title.xml
+++ b/ListViewDemo/res/layout/list_item_title.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_item_title"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="30dp"
     android:orientation="vertical"
     android:background="@color/pp_background_color_grey" >
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_item_title" />
+        android:id="@+id/tv_item_title"
+        android:text="AAAA" />
 
 </LinearLayout>
